[gd_scene load_steps=7 format=3 uid="uid://bobcoqynup0kj"]

[ext_resource type="Script" uid="uid://cvlvwo03044wo" path="res://Scripts/button.gd" id="1_7ppm6"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ppm6"]
albedo_color = Color(0, 0, 0, 1)
metallic = 0.42
metallic_specular = 0.38

[sub_resource type="BoxMesh" id="BoxMesh_goa6q"]
material = SubResource("StandardMaterial3D_7ppm6")
size = Vector3(1, 0.12, 0.63)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jsusv"]
albedo_color = Color(0.22670749, 0.22670749, 0.22670746, 1)

[sub_resource type="BoxMesh" id="BoxMesh_jh5ek"]
material = SubResource("StandardMaterial3D_jsusv")
size = Vector3(0.895, 0.225, 0.505)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_goa6q"]
data = PackedVector3Array(-0.4475, 0.1125, 0.2525, 0.4475, 0.1125, 0.2525, -0.4475, -0.1125, 0.2525, 0.4475, 0.1125, 0.2525, 0.4475, -0.1125, 0.2525, -0.4475, -0.1125, 0.2525, 0.4475, 0.1125, -0.2525, -0.4475, 0.1125, -0.2525, 0.4475, -0.1125, -0.2525, -0.4475, 0.1125, -0.2525, -0.4475, -0.1125, -0.2525, 0.4475, -0.1125, -0.2525, 0.4475, 0.1125, 0.2525, 0.4475, 0.1125, -0.2525, 0.4475, -0.1125, 0.2525, 0.4475, 0.1125, -0.2525, 0.4475, -0.1125, -0.2525, 0.4475, -0.1125, 0.2525, -0.4475, 0.1125, -0.2525, -0.4475, 0.1125, 0.2525, -0.4475, -0.1125, -0.2525, -0.4475, 0.1125, 0.2525, -0.4475, -0.1125, 0.2525, -0.4475, -0.1125, -0.2525, 0.4475, 0.1125, 0.2525, -0.4475, 0.1125, 0.2525, 0.4475, 0.1125, -0.2525, -0.4475, 0.1125, 0.2525, -0.4475, 0.1125, -0.2525, 0.4475, 0.1125, -0.2525, -0.4475, -0.1125, 0.2525, 0.4475, -0.1125, 0.2525, -0.4475, -0.1125, -0.2525, 0.4475, -0.1125, 0.2525, 0.4475, -0.1125, -0.2525, -0.4475, -0.1125, -0.2525)

[node name="Button" type="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_7ppm6")

[node name="Button" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_goa6q")

[node name="Button2" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_jh5ek")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("ConcavePolygonShape3D_goa6q")

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
